src/objects/Funding_Source__c.object
<CustomObject>
    <fields>
        <fullName>Out_patient_Visit_Limit__c</fullName>
        <label>Out-patient Visit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Auth_units__c</fullName>
        <label>PT Auth units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Days_Authorized_From__c</fullName>
        <label>PT Days Authorized From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Days_Authorized_To__c</fullName>
        <label>PT Days Authorized To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Has_Policy__c</fullName>
        <label>Does Patient Have Own Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Over_26_and_On_Parent_s_Policy__c</fullName>
        <label>Patient Over 26 and On Parent&apos;s Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient_Over_64_Years_of_Age__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Over 64 Years of Age</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payer_Name__c</fullName>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Phone__c</fullName>
        <label>Payer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payer_Type__c</fullName>
        <label>Payer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance HMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance EPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Indemnity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medi-Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Medi-Cal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Pay - Lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Pay - Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRICARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - Fee for Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - Pilot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payer_Verification_Date__c</fullName>
        <label>Payer Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Detail__c</fullName>
        <label>Payment Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <label>Payor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Holder__c</fullName>
        <label>Policy Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy ID #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Precert_Company__c</fullName>
        <label>Precert Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precert_Required__c</fullName>
        <label>SNF Precert Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Med_Ind_Phys_Group_Phone__c</fullName>
        <label>Primary Med/Ind Phys Group Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Med_Ind_Phys_Group__c</fullName>
        <label>Primary Med/Ind Phys Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Pmt_Received__c</fullName>
        <label>Prior Pmt Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifying_Stay_Criteria__c</fullName>
        <label>Qualifying Stay Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_of_Reimbursement__c</fullName>
        <label>Rate of Reimbursement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Readmission__c</fullName>
        <label>Readmission</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_Date_Time__c</fullName>
        <label>Received Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_Rate__c</fullName>
        <label>Received Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_To_Patient__c</fullName>
        <label>Relationship to Patient</label>
        <picklist>
            <picklistValues>
                <fullName>Patient/Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Representing_Received__c</fullName>
        <label>Representing (Received)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representing_Request__c</fullName>
        <label>Representing (Request)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representing__c</fullName>
        <label>Representing (Payer)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Contact_Name__c</fullName>
        <label>Spoke With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Fax__c</fullName>
        <label>Request Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Request_Phone__c</fullName>
        <label>Request Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Nurse__c</fullName>
        <label>Review Nurse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoR_to_100_after_met_OOP_Max__c</fullName>
        <label>RoR to 100 after OOP Max met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLP_Auth_Units__c</fullName>
        <label>SLP Auth Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLP_Days_Authorized_From__c</fullName>
        <label>SLP Days Authorized From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLP_Days_Authorized_To__c</fullName>
        <label>SLP Days Authorized To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNF_Day_Total__c</fullName>
        <label>SNF Day Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNF_Days_Used__c</fullName>
        <label>SNF Days Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNF_Fax__c</fullName>
        <label>SNF Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SNF_Phone__c</fullName>
        <label>SNF Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Self_Inflicted__c</fullName>
        <label>Is Dx Self Inflicted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Policy__c</fullName>
        <label>Self-Insured Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Being_Funded_String__c</fullName>
        <description>Used to help populate picklist value from UI. DO NOT DISPLAY</description>
        <label>Service Being Funded String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Being_Funded__c</fullName>
        <label>Service Being Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Family Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC - Attendant Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Integrated Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Rehab Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Based Residential Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Care Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis/Respite Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Response Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAY - Day Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Habilitation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRS/Vocational Rehabilitation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTA - Day Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS - Day Program Summer Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTT - Day Program Afterschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Behavioral Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Home Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H0004 - BH Counseling w/ Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H0018 - BH Group Home Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H0034 - BH Medication/Training Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H0046 - BH Group Home Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2011 - Crisis Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2014 - Training Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2017 - Psychosocial Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAB - Habilitation Group Homes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staffing_Ratio_1_1__c</fullName>
        <label>Staffing Ratio 1:1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_String__c</fullName>
        <label>Status_String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Swing_Bed_Billing_at_SNF_Rate__c</fullName>
        <label>Swing Bed/Billing at SNF Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TPA_Phone__c</fullName>
        <label>TPA Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TPA__c</fullName>
        <label>TPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date_of_Cost_therapy_Auth__c</fullName>
        <label>Term Date of Cost/therapy Auth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Authorized_Therapy_Units__c</fullName>
        <inlineHelpText>This is Automatically calculated and Read0only field.</inlineHelpText>
        <label>Total Weekly Authorized Therapy Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Benefits__c</fullName>
        <label>Transportation Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transportation_Maximum__c</fullName>
        <label>Transportation Maximum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Precert_Required__c</fullName>
        <label>Transportation Precert Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Coverage__c</fullName>
        <label>Coverage Level</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Under_Pre_Existing_Period__c</fullName>
        <label>Under Pre-Existing Period</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VA_Pilot_Clinical_Number__c</fullName>
        <label>VA Pilot Clinical Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <label>Verified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_With__c</fullName>
        <label>Verified With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funding Source</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Referral__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FS-{0}</displayFormat>
        <label>Funding Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Sources</pluralLabel>
    <recordTypes>
        <fullName>Arizona</fullName>
        <active>true</active>
        <label>Arizona</label>
    </recordTypes>
    <recordTypes>
        <fullName>California</fullName>
        <active>true</active>
        <label>California</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_Florida</fullName>
        <active>true</active>
        <label>Cambridge Florida</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_Generic</fullName>
        <active>true</active>
        <label>Cambridge Generic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_Georgia</fullName>
        <active>true</active>
        <label>Cambridge Georgia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_IN</fullName>
        <active>true</active>
        <label>Cambridge Indiana</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_Maryland</fullName>
        <active>true</active>
        <label>Cambridge Maryland</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_Massachusetts</fullName>
        <active>true</active>
        <label>Cambridge Massachusetts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_NC</fullName>
        <active>true</active>
        <label>Cambridge North Carolina</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_New_Jersey</fullName>
        <active>true</active>
        <label>Cambridge New Jersey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge_Ohio</fullName>
        <active>true</active>
        <label>Cambridge Ohio</label>
    </recordTypes>
    <recordTypes>
        <fullName>CareMeridian_FS</fullName>
        <active>true</active>
        <label>CareMeridian</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic</fullName>
        <active>true</active>
        <label>Generic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Illinois</fullName>
        <active>true</active>
        <label>Illinois</label>
    </recordTypes>
    <recordTypes>
        <fullName>Indiana</fullName>
        <active>true</active>
        <label>Indiana</label>
    </recordTypes>
    <recordTypes>
        <fullName>Iowa</fullName>
        <active>true</active>
        <label>Iowa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minnesota</fullName>
        <active>true</active>
        <label>Minnesota</label>
    </recordTypes>
    <recordTypes>
        <fullName>NeuroRestorative</fullName>
        <active>true</active>
        <label>NeuroRestorative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nevada</fullName>
        <active>true</active>
        <label>Nevada</label>
    </recordTypes>
    <recordTypes>
        <fullName>North_Dakota</fullName>
        <active>true</active>
        <label>North Dakota</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ohio</fullName>
        <active>true</active>
        <label>Ohio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oregon</fullName>
        <active>true</active>
        <label>Oregon</label>
    </recordTypes>
    <recordTypes>
        <fullName>West_Virginia</fullName>
        <active>true</active>
        <label>West Virginia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wisconsin</fullName>
        <active>true</active>
        <label>Wisconsin</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Additional_Coverage_Detail</fullName>
        <active>true</active>
        <description>Please provide more detail for Additional Coverage</description>
        <errorConditionFormula>AND(ISPICKVAL(Additional_Coverage__c, &apos;Yes&apos;) , Additional_Coverage_Comments__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Additional_Coverage_Comments__c</errorDisplayField>
        <errorMessage>Please provide more detail for Additional Coverage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Basis_Required_if_Month_to_Month_is_Yes</fullName>
        <active>true</active>
        <description>Basis is Required if Month to Month is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(Month_to_Month__c, &apos;Yes&apos;), Basis__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Basis__c</errorDisplayField>
        <errorMessage>Basis is Required if Month to Month is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claims_Submission_Zip_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Claims_Submission_Zip__c, &quot;\\d{5}(-\\d{4})?&quot;)) &amp;&amp; NOT(ISBLANK(Claims_Submission_Zip__c))</errorConditionFormula>
        <errorDisplayField>Claims_Submission_Zip__c</errorDisplayField>
        <errorMessage>Please enter zip code in the format: XXXXX or XXXXX-XXXX</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cont_Pmnt_Required_if_Ind_Plan_Yes</fullName>
        <active>true</active>
        <description>Continued Payment is Required if Individual Plan is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(Individual_Plan__c, &apos;Yes&apos;), Continued_Payment__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Continued_Payment__c</errorDisplayField>
        <errorMessage>Continued Payment is Required if Individual Plan is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Covered_Required_if_Self_Inflicted</fullName>
        <active>true</active>
        <description>Covered is Required if Self Inflicted if Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(Self_Inflicted__c, &apos;Yes&apos;), Covered__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Covered__c</errorDisplayField>
        <errorMessage>Covered is Required if Self Inflicted if Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dx_Pre_Existing_Required</fullName>
        <active>true</active>
        <description>Dx Pre-Existing is required if Under Pre-Existing Period is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(Under_Pre_Existing_Period__c, &apos;Yes&apos;), Dx_Pre_Existing__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Dx_Pre_Existing__c</errorDisplayField>
        <errorMessage>Dx Pre-Existing is required if Under Pre-Existing Period is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Days_Required</fullName>
        <active>true</active>
        <description>Number of Days is required if Swing Bed/Billing at SNF Rate is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(Swing_Bed_Billing_at_SNF_Rate__c, &apos;Yes&apos;), Number_of_Days__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Number_of_Days__c</errorDisplayField>
        <errorMessage>Number of Days is required if Swing Bed/Billing at SNF Rate is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pmnt_Detail_Required_if_Cobra_is_Yes</fullName>
        <active>true</active>
        <description>Payment Detail is Required if Cobra is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(Cobra__c, &apos;Yes&apos;), Payment_Detail__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Cobra__c</errorDisplayField>
        <errorMessage>Payment Detail is Required if Cobra is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priod_Pmt_Received_Required</fullName>
        <active>true</active>
        <description>Prior Payment Received is Required if Readmission is Yes</description>
        <errorConditionFormula>AND(ISPICKVAL(Readmission__c, &apos;Yes&apos;), Prior_Pmt_Received__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Prior_Pmt_Received__c</errorDisplayField>
        <errorMessage>Prior Payment Received is Required if Readmission is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Z_always</fullName>
        <active>false</active>
        <errorConditionFormula>1=1</errorConditionFormula>
        <errorMessage>test</errorMessage>
    </validationRules>
</CustomObject>